# Textpander

./: .gitignore  Cargo.toml  README.md  app.rc  build.rs
.github/workflows/: build.yml
src/: logic.rs  main.rs  windows_app.rs
