[package]
name = "textpander"
version = "1.0.0"
edition = "2021"
description = "An app that runs as a tray icon and expands abbreviations as you type"

[[bin]]
name = "textpander"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = [
    "winuser",
    "windef",
    "minwindef",
    "libloaderapi",
    "shellapi",
    "wingdi",
    "winbase",
    "processthreadsapi",
    "synchapi",
    "errhandlingapi",
    "winerror",
]

[profile.release]
opt-level = "z"
lto = true
strip = true
